# valorant-game

./: .env.example  .gitignore  README.md  app.py  cnn_model.h5  model.py  pyproject.toml
airflow/: Dockerfile
airflow/dag/: upload_valo.py
assets/: style.css
