[tool.poetry]
name = "dash-project"
version = "0.1.0"
description = ""
authors = ["wansai <wannvisa4488@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
